Fix path to portraits

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h4 style="text-align: center;">Co-located with &nbsp;<a href="https://microarch.org/micro58/" style="color: blue">MICRO 2025</a> at Seoul, South Korea</h4>
     <h4 style="text-align: center;">October 19<sup>th</sup>, 2025</h4>
   <center>
-    <img src="./images/hipchips-meta.jpg" width="20%" height="auto"> <br>
+    <img src="https://hipchips.github.io/micro2024/images/hipchips-meta.jpg" width="20%" height="auto"> <br>
     <font style="font-size: x-small; color: darkgreen;">(Courtesy Meta AI)</font>
   </center>
 </div>
@@ -98,19 +98,22 @@
   to bring together the latest research and development from academia and industry communities and foster closer collaboration to
   address the challenges above. This workshop will focus on several key technology areas in chiplet-based architecture design and
   software ecosystem development. Topics will include but not limited to the followings:	      
-	  <br>
+	  <p>
+	      
 	  Architecture:
         <li> Emerging computing technologies (such as neuromorphic / in-memory computing, optical and quantum computing) and integration
              with heterogeneous chiplet architecture </li>
         <li> Optical chiplet integration approaches to enable composable microarchitectures </li>
         <li> AI powered chiplet designs and system optimizations </li>
         <li> Best practice of chiplet manufacturing and advanced packaging </li>
-
+	  </p>
+	      <p>
 	  Software and Ecosystem:
         <li> Hardware software co-designs on chiplet architecture, programming model and optimizations of heterogeneous chiplet systems </li>
         <li> AI workload characterization and scheduling on heterogeneous chiplet systems</li>
         <li> Performance/power optimizations for resource constrained scenarios (edge) </li>
         <li> Chiplet-to-chiplet proprietary/standardized interface such as UCIe, NVLink etc. </li>
+	      </p>
      </h5>
           
     <h5 class="w3-text-black">
@@ -149,7 +152,7 @@
 		</p>
         </h5>
         <h5 class="w3-text-black" id="org-dj">
-          <p> <img style="float:left;  margin-right: 20px; margin-top: 10px;" src="./images/portrait-dj.png"  width="auto">
+          <p> <img style="float:left;  margin-right: 20px; margin-top: 10px;" src="https://hipchips.github.io/micro2024/images/portrait-dj.png"  width="auto">
 		  <strong> <a href="https://www.linkedin.com/in/djani/">Dharmesh Jani</a>, Meta Platforms</strong> <br>
   	Dharmesh Jani (‘DJ’) is Director at Meta leading the Infrastructure Technology Ecosystem and Partnerships and has been
     an active member of OCP since 2012. He is also co-chair of the OCP Incubation Committee where he started the OCP strategic
@@ -351,11 +354,11 @@
     <div class="w3-content">
       <h2>Schedule</h2>
         <h5 class="w3-text-black">
-          <p> The AT&T Hotel and Conference Center, Room #103 <br>
-	      Austin, Texas, USA <br>
-	      November 2<sup>nd</sup>, 2024, 8:15am - 5:00pm CT <br>
-	      <strong>Zoom Call: <a href="https://us06web.zoom.us/j/85193184152?pwd=9aq5bbY7tfIs6ABj5UmaDVGbfxUaGr.1"> Join the meeting </a>  </strong> 
-		(Meeting ID: 851 9318 4152, Passcode: 765776)       
+          <p> Hotel <br>
+	      Seoul, Korea <br>
+	      October 19<sup>th</sup>, 2025, 8:00am - 5:00pm <br>
+	      <!-- <strong>Zoom Call: <a href="https://us06web.zoom.us/j/85193184152?pwd=9aq5bbY7tfIs6ABj5UmaDVGbfxUaGr.1"> Join the meeting </a>  </strong> 
+		(Meeting ID: 851 9318 4152, Passcode: 765776)       -->
 	  </p>
           <p  style="font-size:8px; ">	  
  <table cellpadding="5" cellspacing="0" style="width:100%">
