--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
         <h5 class="w3-text-black">
 		<p>
 <table cellpadding="1" cellspacing="10" style="width:100%">
-  <!---
 	<tbody>
     <tr style="vertical-align:middle" id="sp-mallik">
-			<td width="15%" align="center"><img src="./images/portrait-mallik.png" height="30%"> </td>
+			<td width="15%" align="center"><img src="https://hipchips.github.io/micro2024/images/portrait-mallik.png" height="30%"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
         <strong><a href="https://www.linkedin.com/in/amallik/">Dr. Arindam Mallik </a></strong>, Department Director, IMEC <br>
        	Arindam Mallik leads Compute System Architecture (CSA) department at imec. He is a technologist enabling HW-SW co-design
@@ -184,21 +183,6 @@
 	and Computer Science from Northwestern University, USA in 2004 and 2008, respectively.
        </td>
 		</tr>
-    <tr style="vertical-align:middle" id="sp-tushar">
-			<td width="15%" align="center"><img src="./images/portrait-tushar.png" height="30%"> </td>
-			<td width="85%" align="left">
-        <strong><a href="https://www.linkedin.com/in/tushar-krishna-a60b0970/">Dr. Tushar Krishna </a></strong>, 
-        Associate Professor, Georgia Institute of Technology <br>
- 	Tushar is an Associate Professor in the School of Electrical and Computer Engineering at Georgia Institute of Technology.
-	He has also been a visiting professor at MIT, Harvard University and a researcher at Intel. He received a Ph.D. in Electrical Engineering
-	and Computer Science from MIT (2014), a M.S.E from Princeton University (2009), and a B.Tech
-	from the Indian Institute of Technology (IIT) Delhi (2007). His research spans computer architecture,
-	interconnection networks, networks-on-chip (NoC), and AI/ML accelerator systems. He was inducted into the HPCA Hall of Fame
-	(2022) and honored by the “Class of 1940 Course Survey Teaching Effectiveness Award” (2018), the “Roger P. Webb Outstanding
-	Junior Faculty Award” (2021), the “Richard M. Bass/Eta Kappa Nu Outstanding Junior Teacher Award” (2023), 
-	and the “Roger P. Webb Outstanding Mid-career Faculty Award” (2024).
-	</td>
-		</tr>
     <tr style="vertical-align:middle" id="sp-deb">
 	<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-deb.png" height="auto" </td>
 	<td width="20%" align="left" style="background-color:lightgray;">
@@ -208,18 +192,7 @@
 	in PCIe, CXL, Intel’s coherency interconnect, on-package interconnects, as well as on-die standards (PIPE, LPIF, CPI, SFI).
        </td>
 		</tr> 
-    <tr style="vertical-align:middle" id="sp-pan">
-			<td width="15%" align="center"><img src="./images/portrait-pan.png" height="auto" </td>
-			<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/davidzpan/">Dr. David Pan</a></strong>, Chair Professor, UT Austin<br>
-        David Z. Pan (Fellow of ACM, IEEE, and SPIE) directs the UT Design Automation (UTDA) Lab. His research interests include
-	electronic design automation, machine learning, design for manufacturing, and emerging technologies. 
-	He has published 500+ refereed papers and graduated 52+ PhDs/postdocs who are holding key academic/industry positions.
-	He has won the SRC Technical Excellence Award in 2013 and 21 Best Paper Awards in premier EDA and chip venues, among others.
-	David obtained his PhD in Computer Science from UCLA.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-ma">
+	<tr style="vertical-align:middle" id="sp-ma">
 			<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-kaisheng.png" height="auto"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
         <strong><a href="https://group.iiis.tsinghua.edu.cn/~maks/">Dr. Kaisheng Ma</a></strong>, Associate Professor, Tsinghua University <br>
@@ -232,34 +205,6 @@
 	2015 HPCA Best Paper Award, etc.
        </td>
 		</tr>
-    <tr style="vertical-align:middle" id="sp-durgesh">
-			<td width="15%" align="center"><img src="./images/portrait-durgesh.png" height="30%"> </td>
-			<td width="85%" align="left">
-        <strong><a href="https://www.linkedin.com/in/durgeshsrivastava/">Durgesh Srivastava</a></strong>, CTO, MIPS <br>
-	Durgesh is the CTO at MIPS. Before MIPS, he held the Senior Director / Data Center Product Architect at Nvidia and various
-	tech/management positions at Intel. Durgesh is an alumnus of IIT Kanpur and Hong Kong University of Science and Technology.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-bapi">
-			<td width="15%" align="center"><img src="https://hipchips.github.io/isca2023/images/portrait-bapi.jpg" height="auto" </td>
-			<td width="20%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/bapivinnakota/">Dr. Bapi Vinnakota</a></strong>, Program Manager, NIST <br>
-        Bapi Vinnakota is a program manager with the NAPMP in CHIPS R&D Office in NIST. Prior to joining NIST, he started
-	and led the Open Domain-Specific Architecture sub-project, within the Open Compute Project to create and establish chiplet economy.
-	He also participated in the Manufacturing Roadmap for Heterogeneous Integration and Electronic Packaging,  a roadmap effort
-	sponsored by NIST and led by Prof. Subu Iyer at UCLA and SEMI. Bapi received his Ph.D. from Princeton University.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-gu">
-			<td width="15%" align="center"><img src="./images/portrait-jiaqi.png" height="auto"> </td>
-			<td width="85%" align="left">
-        <strong><a href="https://www.linkedin.com/in/jiaqi-gu-a86156141/">Dr. Jiaqi Gu</a></strong>, Assistant Professor, Arizona State University <br>
-	Jiaqi is an Assistant Professor of the School of Electrical, Computer and Energy Engineering at Arizona State University.
-	He received his B.E. degree from Fudan University in 2018, and the Ph.D. degree in Electrical and Computer Engineering from
-	The University of Texas at Austin in 2023. His research interests include emerging technology for next-generation AI 
-	computing systems, hardware-algorithm co-design, AI/ML for hardware design, and electronic-photonic design automation.
-       </td>
-		</tr>
     <tr style="vertical-align:middle" id="sp-park">
 			<td width="15%" align="center"><img src="./images/portrait-fitzgerald.png" height="auto"></td>
 			<td width="85%" align="left" style="background-color:lightgray;">
@@ -270,25 +215,19 @@
 	and modeling of SoC, hardware accelerators, and virtual platforms for neural networks and 6G.
        </td>
 		</tr>
-    <tr style="vertical-align:middle" id="sp-srikant">
-			<td width="15%" align="center"><img src="./images/portrait-srikant.png" height="auto"> </td>
-			<td width="85%" align="left">
-        <strong><a href="https://www.linkedin.com/in/srikantvv/">Dr. Srikant Bharadwaj</a></strong>, Sr. Researcher, Microsoft <br>
-	Srikant Bharadwaj is a Senior Researcher at Microsoft working on hardware-software co-design for machine learning and
-	high-performance computing applications in the Systems Innovation Group. Srikant received his Master’s  and PhD degree
-	in Electrical and Computer Engineering from Georgia Institute of Technology. Before joining Microsoft, Srikant worked
-	as a Senior Researcher at AMD Research for about 4.5 years.
+    <tr style="vertical-align:middle" id="sp-cx">
+			<td width="15%" align="center"><img src="./images/cx.png" height="auto"></td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/chixiao-chen-5a05a756/">Dr. Chixiao Chen</a></strong>, Professor, Fudan University<br>
+	Chixiao Chen is an associate professor at Fudan University, Shanghai, China. He servers as the director of Chiplet Innovation Center
+	of the State Key Laboratory of Integral Chips at Fundan. He has served as a TPC member of ASSCC since 2022 and outstanding reviewer
+	of IEEE SSCL society. He was the co-awardee of ASSCC 2024 Distinguished Design Award. His research interests include mixed-signal
+	integrated circuit design, intelligent computing circuits & systems, and 2.5D/3D/3.5D integration technology.
+	Chixiao received his BSc and PhD degrees in microelectronics from Fudan University in 2010 and 2016 respectively.
+	He was a post doc research associate with Univeristy of Washtington, Seattle from 2016 to 2018.
        </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-venkat">
-			<td width="15%" align="center"><img src="./images/portrait-venkat.png" height="auto" </td>
-			<td width="20%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/venkatramesh/">Venkat Ramesh</a></strong>, Production System Lead, Meta<br>
-        Venkat Ramesh is a Production Systems Engineer working in Meta's Infrastructure Org. Venkat leads various initiatives on
-	diagnostics development, telemetry gathering  and performance for AI silicon, systems and training clusters. In his past life,
-	he worked on telemetry software, as well as performance engineering teams at a couple of Flash vendors.
-       </td>
-		</tr>
+		</tr>		
+		<!-- 
     <tr style="vertical-align:middle" id="sp-cao">
 			<td width="15%" align="center"><img src="./images/portrait-lihong.png" height="auto" </td>
 			<td width="20%" align="left">
@@ -301,48 +240,7 @@
 	interconnect standardization effort in UCIe (Universal Chiplets Interconnect Express) consortium as Board of Director of ASE.
        </td>
 		</tr>
-    <tr style="vertical-align:middle" id="sp-saeed">
-			<td width="15%" align="center"><img src="./images/portrait-saeed.png" height="auto" </td>
-			<td width="20%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/saeedf/">Dr. Saeed Fathololoumi</a></strong>, System Lead, Intel<br>
-        Saeed Fathololoumi is a Principal Engineer and Photonic Architect at Intel, developing co-packaged optics and optical compute 
-	interconnect for AI/ML ASIC connectivity applications. He has led development of many industry firsts,
-	including OCI chiplets for connecting XPUs and fully operation co-package optic connectivity with switch ASIC. He worked at
-	Elenion Technologies, Mellanox, Kotura and National Research Council of Canada, previously. 
-	He obtained his PhD in Electrical and Computer Engineering from University of Waterloo.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-nathan">
-			<td width="15%" align="center"><img src="./images/portrait-nathan.png" height="auto" </td>
-			<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/nathan-kalyanasundharam-5b95943/">Nathan Kalyanasundharam</a></strong>, Corporate Fellow, AMD<br>
-        Nathan is the lead architect of AMD’s Infinity Fabric, responsible for delivering coherent interconnect protocol and
-	technology across all AMD products. He is passionate about open standards to enable heterogenous computing. 
-	He is a member of the Board of Directors at Compute Express Link (CXL) and Universal Chiplet Interconnect Express(UCIE) consortia.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-koichi">
-			<td width="15%" align="center"><img src="./images/portrait-koichi.png" height="auto" </td>
-			<td width="20%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/koichi-yamaguchi-bb86576/">Dr. Koichi Yamaguchi</a></strong>, Meta <br>
-        Koichi Yamaguchi received his B.E. and M.E. degrees in Electrical Engineering from the Tokyo Institute of Technology, 
-	and Ph.D. in Engineering from Tokyo University. He was a visiting scholar at Stanford University, and worked at NEC,
-	Renesas Electronics, MegaChips Technology America, and Intel (mixed-signal
-	modeling/verification and system design of high-speed serial transceivers). He served as a member of 
-	the wireline subcommittee for ISSCC from 2009 to 2014. Now he works at Meta on signal and power integrity,
-	high-speed I/O interface for next-generation AR/VR devices.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-yilmaz">
-			<td width="15%" align="center"><img src="./images/portrait-yilmaz.png" height="auto" </td>
-			<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/mahmut-yilmaz-4961196/">Dr. Mahmut Yilmaz</a></strong>, Director, Nvidia <br>
-        Mahmut Yilmaz earned his M.S. and Ph.D. degrees in Electrical and Computer Engineering from Duke University in 2006 and 2009,
-	respectively. Currently, he serves as a Director of Engineering at NVIDIA, where he specializes in enhancing chip reliability
-	and quality, silicon lifecycle management, and developing the NVIDIA MATHS and In-System Test architecture.
-       </td>
-		</tr>
-    -->
+		-->
       </tbody>
 </table>	
 		</p>
