Add Gabriel Loh

--- a/index.html
+++ b/index.html
@@ -185,16 +185,26 @@
 		</tr>
     <tr style="vertical-align:middle" id="sp-deb">
 	<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-deb.png" height="auto" </td>
-	<td width="20%" align="left" style="background-color:lightgray;">
+	<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong><br>
         UCIe Chair, Sr Fellow, Intel <br>
         Chief Architect of I/O Technologies and Standards: Responsible for driving Intel-wide critical interconnect technologies
 	in PCIe, CXL, Intel’s coherency interconnect, on-package interconnects, as well as on-die standards (PIPE, LPIF, CPI, SFI).
        </td>
 		</tr> 
+    <tr style="vertical-align:middle" id="sp-park">
+			<td width="15%" align="center"><img src="https://hipchips.github.io/micro2024/images/portrait-fitzgerald.png" height="auto"></td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/fitzgerald-sungkyung-park-0446006/">Dr. Fitzgerald Sungkyung Park</a></strong>, Professor, Pusan National University<br>
+	Fitzgerald Sungkyung Park took his Ph.D. degree in electronics engineering from Seoul National University, Korea. 
+	He worked for Samsung Electronics, Electronics and Telecommunications Research Institute (ETRI), and Ericsson, Inc., USA, 
+	where he developed circuits for various transceivers. After joining Pusan National University, his research interests include design
+	and modeling of SoC, hardware accelerators, and virtual platforms for neural networks and 6G.
+       </td>
+		</tr>	
 	<tr style="vertical-align:middle" id="sp-ma">
 			<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-kaisheng.png" height="auto"> </td>
-			<td width="85%" align="left" style="background-color:lightgray;">
+			<td width="85%" align="left">
         <strong><a href="https://group.iiis.tsinghua.edu.cn/~maks/">Dr. Kaisheng Ma</a></strong>, Associate Professor, Tsinghua University <br>
  	Kaisheng is an Associate Professor in Institute for Interdisciplinary Information Sciences (IIIS), Tsinghua University. 
 	He received his Ph.D. in Computer Science and Engineering at the Pennsylvania State University. His research focuses
@@ -203,16 +213,6 @@
 	and honors, including 2024 HPCA Distinguished Artifact Award (1/410), 2022 CCF Integrated Circuit Early Career Award, 
 	2020 Springer Nature Research Highlights from China Collection Award, 2017 ASP-DAC Best Paper Award, 2016 IEEE MICRO Top Picks,
 	2015 HPCA Best Paper Award, etc.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-park">
-			<td width="15%" align="center"><img src="./images/portrait-fitzgerald.png" height="auto"></td>
-			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/fitzgerald-sungkyung-park-0446006/">Dr. Fitzgerald Sungkyung Park</a></strong>, Professor, Pusan National University<br>
-	Fitzgerald Sungkyung Park took his Ph.D. degree in electronics engineering from Seoul National University, Korea. 
-	He worked for Samsung Electronics, Electronics and Telecommunications Research Institute (ETRI), and Ericsson, Inc., USA, 
-	where he developed circuits for various transceivers. After joining Pusan National University, his research interests include design
-	and modeling of SoC, hardware accelerators, and virtual platforms for neural networks and 6G.
        </td>
 		</tr>
     <tr style="vertical-align:middle" id="sp-cx">
@@ -226,7 +226,14 @@
 	Chixiao received his BSc and PhD degrees in microelectronics from Fudan University in 2010 and 2016 respectively.
 	He was a post doc research associate with Univeristy of Washtington, Seattle from 2016 to 2018.
        </td>
-		</tr>		
+		</tr>
+	<tr style="vertical-align:middle" id="sp-loh">
+			<td width="15%" align="center"><img src="./images/portrait-loh.png" height="auto"> </td>
+			<td width="85%" align="left">
+        <strong><a href="https://www.linkedin.com/in/gabriel-gabe-loh-78ab4459/">Dr. Gabriel Loh</a></strong>, Senior Fellow, AMD <br>
+ 	CV.
+       </td>
+		</tr>
 		<!-- 
     <tr style="vertical-align:middle" id="sp-cao">
 			<td width="15%" align="center"><img src="./images/portrait-lihong.png" height="auto" </td>
