--- a/index.html
+++ b/index.html
@@ -171,27 +171,6 @@
 		<p>
 <table cellpadding="1" cellspacing="10" style="width:100%">
 	<tbody>
-    <tr style="vertical-align:middle" id="sp-mallik">
-			<td width="15%" align="center"><img src="https://hipchips.github.io/micro2024/images/portrait-mallik.png" height="30%"> </td>
-			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/amallik/">Dr. Arindam Mallik </a></strong>, Department Director, IMEC <br>
-       	Arindam Mallik leads Compute System Architecture (CSA) department at imec. He is a technologist enabling HW-SW co-design
-	at the cross-point of AI algorithms, computer architecture, and novel technology solutions. 
-	Arindam has spent the past 20 years pushing the boundaries of technology research to provide novel solutions with a direct
-	impact on the semiconductor industry. He has authored or co-authored more than 100 papers in international journals, 
-	conference proceedings, and holds number of relevant patents. He received M.S. and PhD degree in Electrical Engineering 
-	and Computer Science from Northwestern University, USA in 2004 and 2008, respectively.
-       </td>
-		</tr>
-    <tr style="vertical-align:middle" id="sp-deb">
-	<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-deb.png" height="auto" </td>
-	<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong><br>
-        UCIe Chair, Sr Fellow, Intel <br>
-        Chief Architect of I/O Technologies and Standards: Responsible for driving Intel-wide critical interconnect technologies
-	in PCIe, CXL, Intel’s coherency interconnect, on-package interconnects, as well as on-die standards (PIPE, LPIF, CPI, SFI).
-       </td>
-		</tr> 
     <tr style="vertical-align:middle" id="sp-park">
 			<td width="15%" align="center"><img src="https://hipchips.github.io/micro2024/images/portrait-fitzgerald.png" height="auto"></td>
 			<td width="85%" align="left" style="background-color:lightgray;">
@@ -202,6 +181,27 @@
 	and modeling of SoC, hardware accelerators, and virtual platforms for neural networks and 6G.
        </td>
 		</tr>	
+    <tr style="vertical-align:middle" id="sp-deb">
+	<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-deb.png" height="auto" </td>
+	<td width="20%" align="left">
+        <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong><br>
+        UCIe Chair, Sr Fellow, Intel <br>
+        Chief Architect of I/O Technologies and Standards: Responsible for driving Intel-wide critical interconnect technologies
+	in PCIe, CXL, Intel’s coherency interconnect, on-package interconnects, as well as on-die standards (PIPE, LPIF, CPI, SFI).
+       </td>
+		</tr> 
+    <tr style="vertical-align:middle" id="sp-cx">
+			<td width="15%" align="center"><img src="./images/portrait-cx.jpg" height="auto"></td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/chixiao-chen-5a05a756/">Dr. Chixiao Chen</a></strong>, Associate Professor, Fudan University<br>
+	Chixiao Chen is an associate professor at Fudan University, Shanghai, China. He servers as the director of Chiplet Innovation Center
+	of the State Key Laboratory of Integral Chips at Fundan. He has served as a TPC member of ASSCC since 2022 and outstanding reviewer
+	of IEEE SSCL society. He was the co-awardee of ASSCC 2024 Distinguished Design Award. His research interests include mixed-signal
+	integrated circuit design, intelligent computing circuits & systems, and 2.5D/3D/3.5D integration technology.
+	Chixiao received his BSc and PhD degrees in microelectronics from Fudan University in 2010 and 2016 respectively.
+	He was a post doc research associate with Univeristy of Washtington, Seattle from 2016 to 2018.
+       </td>
+		</tr>
 	<tr style="vertical-align:middle" id="sp-ma">
 			<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-kaisheng.png" height="auto"> </td>
 			<td width="85%" align="left">
@@ -215,20 +215,20 @@
 	2015 HPCA Best Paper Award, etc.
        </td>
 		</tr>
-    <tr style="vertical-align:middle" id="sp-cx">
-			<td width="15%" align="center"><img src="./images/cx.png" height="auto"></td>
+    <tr style="vertical-align:middle" id="sp-mallik">
+			<td width="15%" align="center"><img src="https://hipchips.github.io/micro2024/images/portrait-mallik.png" height="30%"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/chixiao-chen-5a05a756/">Dr. Chixiao Chen</a></strong>, Professor, Fudan University<br>
-	Chixiao Chen is an associate professor at Fudan University, Shanghai, China. He servers as the director of Chiplet Innovation Center
-	of the State Key Laboratory of Integral Chips at Fundan. He has served as a TPC member of ASSCC since 2022 and outstanding reviewer
-	of IEEE SSCL society. He was the co-awardee of ASSCC 2024 Distinguished Design Award. His research interests include mixed-signal
-	integrated circuit design, intelligent computing circuits & systems, and 2.5D/3D/3.5D integration technology.
-	Chixiao received his BSc and PhD degrees in microelectronics from Fudan University in 2010 and 2016 respectively.
-	He was a post doc research associate with Univeristy of Washtington, Seattle from 2016 to 2018.
+        <strong><a href="https://www.linkedin.com/in/amallik/">Dr. Arindam Mallik </a></strong>, Department Director, IMEC <br>
+       	Arindam Mallik leads Compute System Architecture (CSA) department at imec. He is a technologist enabling HW-SW co-design
+	at the cross-point of AI algorithms, computer architecture, and novel technology solutions. 
+	Arindam has spent the past 20 years pushing the boundaries of technology research to provide novel solutions with a direct
+	impact on the semiconductor industry. He has authored or co-authored more than 100 papers in international journals, 
+	conference proceedings, and holds number of relevant patents. He received M.S. and PhD degree in Electrical Engineering 
+	and Computer Science from Northwestern University, USA in 2004 and 2008, respectively.
        </td>
 		</tr>
 	<tr style="vertical-align:middle" id="sp-loh">
-			<td width="15%" align="center"><img src="./images/portrait-loh.png" height="auto"> </td>
+			<td width="15%" align="center"><img src="./images/portrait-loh.jpg" height="auto"> </td>
 			<td width="85%" align="left">
         <strong><a href="https://www.linkedin.com/in/gabriel-gabe-loh-78ab4459/">Dr. Gabriel Loh</a></strong>, Senior Fellow, AMD <br>
  	CV.
