--- a/index.html
+++ b/index.html
@@ -202,17 +202,11 @@
 	He was a post doc research associate with Univeristy of Washtington, Seattle from 2016 to 2018.
        </td>
 		</tr>
-	<tr style="vertical-align:middle" id="sp-ma">
-			<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-kaisheng.png" height="auto"> </td>
+	<tr style="vertical-align:middle" id="sp-loh">
+			<td width="15%" align="center"><img src="./images/portrait-loh.jpg" height="auto"> </td>
 			<td width="85%" align="left">
-        <strong><a href="https://group.iiis.tsinghua.edu.cn/~maks/">Dr. Kaisheng Ma</a></strong>, Associate Professor, Tsinghua University <br>
- 	Kaisheng is an Associate Professor in Institute for Interdisciplinary Information Sciences (IIIS), Tsinghua University. 
-	He received his Ph.D. in Computer Science and Engineering at the Pennsylvania State University. His research focuses
-	on Robust and Efficient AI Algorithms, Post-Moore Architecture, and High-Performance Chips. Dr. Ma has published more than
-	50 papers on top conferences including NeurIPS, ICCV, AAAI, CVPR, ISCA, ASPLOS, MICRO, HPCA, DAC etc. He has won many awards
-	and honors, including 2024 HPCA Distinguished Artifact Award (1/410), 2022 CCF Integrated Circuit Early Career Award, 
-	2020 Springer Nature Research Highlights from China Collection Award, 2017 ASP-DAC Best Paper Award, 2016 IEEE MICRO Top Picks,
-	2015 HPCA Best Paper Award, etc.
+        <strong><a href="https://www.linkedin.com/in/gabriel-gabe-loh-78ab4459/">Dr. Gabriel Loh</a></strong>, Senior Fellow, AMD <br>
+ 	CV.
        </td>
 		</tr>
     <tr style="vertical-align:middle" id="sp-mallik">
@@ -227,14 +221,28 @@
 	and Computer Science from Northwestern University, USA in 2004 and 2008, respectively.
        </td>
 		</tr>
-	<tr style="vertical-align:middle" id="sp-loh">
-			<td width="15%" align="center"><img src="./images/portrait-loh.jpg" height="auto"> </td>
+	<tr style="vertical-align:middle" id="sp-ma">
+			<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-kaisheng.png" height="auto"> </td>
 			<td width="85%" align="left">
-        <strong><a href="https://www.linkedin.com/in/gabriel-gabe-loh-78ab4459/">Dr. Gabriel Loh</a></strong>, Senior Fellow, AMD <br>
- 	CV.
+        <strong><a href="https://group.iiis.tsinghua.edu.cn/~maks/">Dr. Kaisheng Ma</a></strong>, Associate Professor, Tsinghua University <br>
+ 	Kaisheng is an Associate Professor in Institute for Interdisciplinary Information Sciences (IIIS), Tsinghua University. 
+	He received his Ph.D. in Computer Science and Engineering at the Pennsylvania State University. His research focuses
+	on Robust and Efficient AI Algorithms, Post-Moore Architecture, and High-Performance Chips. Dr. Ma has published more than
+	50 papers on top conferences including NeurIPS, ICCV, AAAI, CVPR, ISCA, ASPLOS, MICRO, HPCA, DAC etc. He has won many awards
+	and honors, including 2024 HPCA Distinguished Artifact Award (1/410), 2022 CCF Integrated Circuit Early Career Award, 
+	2020 Springer Nature Research Highlights from China Collection Award, 2017 ASP-DAC Best Paper Award, 2016 IEEE MICRO Top Picks,
+	2015 HPCA Best Paper Award, etc.
        </td>
 		</tr>
-		<!-- 
+	<tr style="vertical-align:middle" id="sp-minsoon">
+			<td width="15%" align="center"><img src="./images/portrait-minsoon.jpg" height="auto"> </td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/minsoon-hwang-a3840326/">Dr. Minsoon Hwang</a></strong>, Director, SK hynix <br>
+ 	To update.
+       </td>
+		</tr>
+		
+	<!-- 
     <tr style="vertical-align:middle" id="sp-cao">
 			<td width="15%" align="center"><img src="./images/portrait-lihong.png" height="auto" </td>
 			<td width="20%" align="left">
