--- a/index.html
+++ b/index.html
@@ -237,8 +237,12 @@
 	<tr style="vertical-align:middle" id="sp-minsoon">
 			<td width="15%" align="center"><img src="./images/portrait-minsoon.jpg" height="auto"> </td>
 			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/minsoon-hwang-a3840326/">Dr. Minsoon Hwang</a></strong>, Director, SK hynix <br>
- 	To update.
+        <strong><a href="https://www.linkedin.com/in/minsoon-hwang-a3840326/">Dr. Minsoon Hwang</a></strong>, SoC Architect, SK hynix <br>
+ 	Minsoon is a SoC Architect at SK hynix, researching the future memory and storage solutions. He is interested in analog and
+	mixed signal circuit design, high speed interface, chiplet, and memory & storage architecture such DRAM, NAND flash, 
+	and new memories. He worked about 20 years in the field of solid state circuit design such as display, CMOS image sensor,
+	RF transceiver and DRAM/NAND Flash solutions and CDMA communication systems for LG Electronics and SK hynix. He received
+	his Ph.D. degree in electrical and computer engineering from University of Florida, Gainesville.
        </td>
 		</tr>
 		
