Update Anu and Debendra

--- a/index.html
+++ b/index.html
@@ -184,10 +184,12 @@
     <tr style="vertical-align:middle" id="sp-deb">
 	<td width="15%" align="center"><img src="https://hipchips.github.io/hpca2023/portraits/portrait-deb.png" height="auto" </td>
 	<td width="20%" align="left">
-        <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong><br>
-        UCIe Chair, Sr Fellow, Intel <br>
-        Chief Architect of I/O Technologies and Standards: Responsible for driving Intel-wide critical interconnect technologies
-	in PCIe, CXL, Intel’s coherency interconnect, on-package interconnects, as well as on-die standards (PIPE, LPIF, CPI, SFI).
+        <strong><a href="https://www.linkedin.com/in/debendra-das-sharma-72514918/">Dr. Debendra Das Sharma</a></strong>, Sr Fellow, Intel <br>
+	Dr. Debendra Das Sharma is an Intel Senior Fellow at Intel Corporation, responsible for I/O Technologies and Standards. 
+	He has been driving PCI-Express, CXL, and UCIe standards across the industry since their inception. He holds more than
+	220 US patents and 500 patents world-wide. He has been awarded the Distinguished Alumnus Award from IIT, Kharagpur, 
+	the 2021 IEEE Region 6 Outstanding Engineer Award, the first PCI-SIG Lifetime Contribution Award, the 2022 IEEE Circuits 
+	and Systems Industrial Pioneer Award, and the 2024 IEEE Computer Society Edward J. McCluskey Technical Achievement Award.
        </td>
 		</tr> 
     <tr style="vertical-align:middle" id="sp-cx">
@@ -245,7 +247,17 @@
 	his Ph.D. degree in electrical and computer engineering from University of Florida, Gainesville.
        </td>
 		</tr>
-		
+	<tr style="vertical-align:middle" id="sp-minsoon">
+			<td width="15%" align="center"><img src="./images/portrait-anu.jpg" height="auto"> </td>
+			<td width="85%" align="left">
+        <strong><a href="https://www.linkedin.com/in/anu-ramamurthy-8352826/">Anu Ramamurthy</a></strong>, Associate Fellow, Microchip<br>
+ 	Anu has been working in the semiconductor industry for over 25 years in various engineering roles. She is an Associate
+	Fellow, Design at Microchip Technology with a focus on R&D and pathfinding. She is currently working in the area of advanced packaging,
+	heterogeneous integration and chiplet design. She is also the co-lead of the Open Chiplet Economy (OCE) subgroup of 
+	the Open Compute Project (OCP). Anu is also very interested in mentoring women in engineering, has been part of the TechWomen program
+	run by the U.S State department and actively involved in the mentoring programs at Microchip.
+       </td>
+		</tr>		
 	<!-- 
     <tr style="vertical-align:middle" id="sp-cao">
 			<td width="15%" align="center"><img src="./images/portrait-lihong.png" height="auto" </td>
