--- a/index.html
+++ b/index.html
@@ -271,6 +271,15 @@
 	interconnect standardization effort in UCIe (Universal Chiplets Interconnect Express) consortium as Board of Director of ASE.
        </td>
 		</tr>
+	<tr style="vertical-align:middle" id="sp-minsoon">
+			<td width="15%" align="center"><img src="./images/portrait-lee.jpg" height="auto"> </td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, System Architect, Samsung<br>
+ 	Kyoungmin is a senior system architect at Samsung S.LSI, specializing in chiplet architectures using advanced package technology.
+	With over 19 years of experience at Samsung S.LSI, he has a market proven track record in developing mobile soc product. 
+	Kyoungmin Lee took his Ph.D. degree from Sungkyunkwan University, Suwon, South Korea.
+       </td>
+		</tr>
 		-->
       </tbody>
 </table>	
