Fix Kyoungmin's bio

--- a/index.html
+++ b/index.html
@@ -257,27 +257,27 @@
 	the Open Compute Project (OCP). Anu is also very interested in mentoring women in engineering, has been part of the TechWomen program
 	run by the U.S State department and actively involved in the mentoring programs at Microchip.
        </td>
-		</tr>		
+		</tr>
+	<tr style="vertical-align:middle" id="sp-lee">
+			<td width="15%" align="center"><img src="./images/portrait-lee.jpg" height="auto"> </td>
+			<td width="85%" align="left" style="background-color:lightgray;">
+        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, Sr. System Architect, Samsung<br>
+ 	Kyoungmin is a senior system architect at Samsung S.LSI, specializing in chiplet architectures using advanced package technology.
+	With over 19 years of experience at Samsung S.LSI, he has a market proven track record in developing mobile soc product. 
+	Kyoungmin Lee took his Ph.D. degree from Sungkyunkwan University, Suwon, South Korea.
+       </td>
+		</tr>
 	<!-- 
     <tr style="vertical-align:middle" id="sp-cao">
 			<td width="15%" align="center"><img src="./images/portrait-lihong.png" height="auto" </td>
 			<td width="20%" align="left">
         <strong><a href="https://www.linkedin.com/in/lihongcao/">Lihong Cao</a></strong>, Sr. Director, ASE Group<br>
-        Lihong Cao is a senior director of engineering/technical marketing at ASE US Inc. 
+    Lihong Cao is a senior director of engineering/technical marketing at ASE US Inc. 
 	She has comprehensive experience driving new product and advanced packaging technology development, new product introduction,
 	quality and reliability, Fab/OSATs processes and root cause analysis. Responsible for advanced packaging architecture, chiplets
 	interconnect, advanced packaging technology development (2.5D/3D, FOCoS, Embedded Bridge, SIP, SiPh) for Chiplets and
 	Heterogeneous Integration, Technology promotion, Strategic planning and Business engagement. She leads chiplets Die to Die
 	interconnect standardization effort in UCIe (Universal Chiplets Interconnect Express) consortium as Board of Director of ASE.
-       </td>
-		</tr>
-	<tr style="vertical-align:middle" id="sp-minsoon">
-			<td width="15%" align="center"><img src="./images/portrait-lee.jpg" height="auto"> </td>
-			<td width="85%" align="left" style="background-color:lightgray;">
-        <strong><a href="https://www.linkedin.com/in/kyoungmin-lee-455137121/">Dr. Kyoungmin Lee</a></strong>, System Architect, Samsung<br>
- 	Kyoungmin is a senior system architect at Samsung S.LSI, specializing in chiplet architectures using advanced package technology.
-	With over 19 years of experience at Samsung S.LSI, he has a market proven track record in developing mobile soc product. 
-	Kyoungmin Lee took his Ph.D. degree from Sungkyunkwan University, Suwon, South Korea.
        </td>
 		</tr>
 		-->
